# backend-TISS

./: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
Clin/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
core/models/: Clinica.py  Medico.py  Paciente.py  Recepcionista.py
tiss_api/: admin.py  apps.py  models.py  serializer.py
tiss_api/api/serializers/: beneficiarioSerializer.py  contratadoSerializer.py  guiaSerializer.py  procedimentoSerializer.py  profissionalSerializer.py
tiss_api/migrations/: 0001_initial.py
tiss_api/models/: Beneficiario.py  Contratado.py  Guias.py  Procedimento.py  Profissional.py
