[project]
name = "backend-TISS"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "arthurmnz",email = "arthur.gomemenezes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.16.0)",
    "docling (==2.34.0)",
    "docling-core (==2.31.2)",
    "docling-ibm-models (==3.4.3)",
    "docling-parse (==4.0.1)",
    "pydantic (==2.11.5)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.0)",
    "drf-spectacular (==0.28.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
